# oracle_fdw

./: .gitmodules  CHANGELOG  CMakeLists.txt  README.oracle_fdw  RUST_PG_CALLBACKS.md  oracle_fdw--1.0--1.1.sql  oracle_fdw--1.1--1.2.sql  oracle_fdw--1.2.sql  oracle_fdw.c  oracle_fdw.h  oracle_jni_fdw--1.0.sql  oracle_jni_fdw.control  oracle_utils.h
jni_backend/: oracle_gis_stub.c  oracle_utils_jni.c
jni_backend/java/: OracleJdbcBackend.java  README.md
rust_backend/: oracle_rust_pg_callbacks.c  oracle_rust_pg_callbacks.h
sql/: oracle_jni_fdw.sql
test/: oracle_utils_demo.c  oracle_utils_demo_support.c
test/script/: init.cmd  init.sh
